[gd_scene load_steps=4 format=3 uid="uid://bxrdiohesdm7c"]

[ext_resource type="Script" path="res://scripts/crafting/WorldItem.gd" id="1_u5ovl"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_o0xfd"]
bounce = 0.5

[sub_resource type="CircleShape2D" id="CircleShape2D_mmowu"]
radius = 7.0

[node name="WorldItem" type="RigidBody2D"]
visibility_layer = 4
z_index = 1
collision_layer = 16
collision_mask = 3
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_o0xfd")
script = ExtResource("1_u5ovl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_mmowu")

[node name="Shadow" type="Sprite2D" parent="."]
scale = Vector2(2.325, 2.325)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
